Bug #9558  mysqldump --no-data db t1 t2 format still dumps data     - Check the Dflag variable inside of function dump_table to see if data should be dumped or not.     - Add test for --xml and --no-data as well     Reapplying patch!

client/mysqldump.c:
  Move the check of --no-data flag and "number of fields" inside of the dump_table
  function.
mysql-test/r/mysqldump.result:
  Update test results add ouput for --xml and --no-data
mysql-test/t/mysqldump.test:
  Add tests for XML and --no-data as well.